[package]
name = "actix-form-data"
description = "Multipart Form Data for Actix Web"
version = "0.1.1"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/actix-multipart"
readme = "README.md"
keywords = ["actix", "form-data", "multipart", "async"]

[lib]
name = "form_data"

[dependencies]
actix = "0.5.6"
actix-web = "0.5.6"
bytes = "0.4.7"
failure = "0.1"
futures = "0.1.21"
futures-cpupool = "0.1.8"
futures-fs = "0.0.4"
http = "0.1.5"
log = "0.4.1"
mime = "0.3.5"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []
with-serde = ["serde", "serde_derive"]

[dev-dependencies]
env_logger = "0.5.9"
serde = "1.0"
serde_derive = "1.0"
